--- a/Nothing Can Go Wrong/.godot/editor/editor_layout.cfg
+++ b/Nothing Can Go Wrong/.godot/editor/editor_layout.cfg
@@ -19,8 +19,8 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://assets/tiles/trees_tiles.png")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://autoload/ScreenTransition/", "res://assets/", "res://assets/tiles/")
+dock_filesystem_selected_paths=PackedStringArray("res://assets/temporary_character.png")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://autoload/ScreenTransition/", "res://assets/", "res://assets/tiles/", "res://assets/environment/")
 dock_split_1=0
 dock_1="FileSystem,History"
 dock_3="Scene,Import"
@@ -30,16 +30,16 @@ dock_4="Inspector,Node"
 
 open_scenes=PackedStringArray("res://main/main.tscn", "res://autoload/ScreenTransition/screen_transition.tscn", "res://scenes/camp_site/camp_site.tscn")
 current_scene="res://main/main.tscn"
-center_split_offset=-496
+center_split_offset=-498
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=0
 selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://main/main.gd", "res://scenes/managers/scene_manager.gd", "res://autoload/ScreenTransition/screen_transition.gd"]
+open_scripts=["res://scenes/camp_site/camp_site.gd", "res://scenes/game_objects/fireplace/fireplace.gd", "res://scenes/camera/game_camera.gd", "res://main/main.gd", "res://scenes/player/player.gd", "res://scenes/managers/scene_manager.gd", "res://autoload/ScreenTransition/screen_transition.gd", "res://scenes/game_objects/tent/tent.gd", "res://scenes/components/velocity_component.gd"]
 selected_script="res://main/main.gd"
-open_help=[]
+open_help=["@GlobalScope"]
 script_split_offset=70
 list_split_offset=0
 
