Item manager and stats manager, now working on UI

--- a/Nothing Can Go Wrong/.godot/editor/editor_layout.cfg
+++ b/Nothing Can Go Wrong/.godot/editor/editor_layout.cfg
@@ -19,8 +19,8 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://assets/temporary_character.png")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://autoload/ScreenTransition/", "res://assets/", "res://assets/tiles/", "res://assets/environment/")
+dock_filesystem_selected_paths=PackedStringArray("res://assets/icons/")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://autoload/ScreenTransition/", "res://assets/", "res://assets/icons/", "res://assets/environment/")
 dock_split_1=0
 dock_1="FileSystem,History"
 dock_3="Scene,Import"
@@ -28,17 +28,17 @@ dock_4="Inspector,Node"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://main/main.tscn", "res://autoload/ScreenTransition/screen_transition.tscn", "res://scenes/camp_site/camp_site.tscn")
-current_scene="res://main/main.tscn"
+open_scenes=PackedStringArray("res://main/main.tscn", "res://scenes/camp_site/camp_site.tscn", "res://scenes/managers/item_manager.tscn", "res://scenes/UI/hud.tscn")
+current_scene="res://scenes/UI/hud.tscn"
 center_split_offset=-498
-selected_default_debugger_tab_idx=0
+selected_default_debugger_tab_idx=1
 selected_main_editor_idx=0
 selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://scenes/camp_site/camp_site.gd", "res://scenes/game_objects/fireplace/fireplace.gd", "res://scenes/camera/game_camera.gd", "res://main/main.gd", "res://scenes/player/player.gd", "res://scenes/managers/scene_manager.gd", "res://autoload/ScreenTransition/screen_transition.gd", "res://scenes/game_objects/tent/tent.gd", "res://scenes/components/velocity_component.gd"]
-selected_script="res://main/main.gd"
+open_scripts=["res://scenes/camp_site/camp_site.gd", "res://scenes/game_objects/fireplace/fireplace.gd", "res://scenes/camera/game_camera.gd", "res://scenes/UI/hud.gd", "res://scenes/managers/item_manager.gd", "res://main/main.gd", "res://scenes/player/player.gd", "res://scenes/managers/scene_manager.gd", "res://autoload/ScreenTransition/screen_transition.gd", "res://scenes/managers/stats_manager.gd", "res://scenes/game_objects/tent/tent.gd", "res://scenes/components/velocity_component.gd"]
+selected_script="res://scenes/UI/hud.gd"
 open_help=["@GlobalScope"]
 script_split_offset=70
 list_split_offset=0
