gotta go, in the middle of HUD

--- a/Nothing Can Go Wrong/.godot/global_script_class_cache.cfg
+++ b/Nothing Can Go Wrong/.godot/global_script_class_cache.cfg
@@ -1,5 +1,11 @@
 list=Array[Dictionary]([{
 "base": &"Node",
+"class": &"StatsManager",
+"icon": "",
+"language": &"GDScript",
+"path": "res://scenes/managers/stats_manager.gd"
+}, {
+"base": &"Node",
 "class": &"VelocityComponent",
 "icon": "",
 "language": &"GDScript",
