--- a/Nothing Can Go Wrong/.godot/editor/editor_layout.cfg
+++ b/Nothing Can Go Wrong/.godot/editor/editor_layout.cfg
@@ -9,18 +9,18 @@ dock_6_selected_tab_idx=0
 dock_7_selected_tab_idx=0
 dock_8_selected_tab_idx=0
 dock_floating={}
-dock_split_2=-63
+dock_split_2=-96
 dock_split_3=0
 dock_hsplit_1=264
-dock_hsplit_2=471
+dock_hsplit_2=383
 dock_hsplit_3=-391
 dock_hsplit_4=0
 dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://resources/theme/theme.tres")
-dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://resources/", "res://resources/theme/")
+dock_filesystem_selected_paths=PackedStringArray("res://assets/UI_images/health_bar_empty.png")
+dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://resources/", "res://resources/theme/", "res://assets/", "res://assets/UI_images/")
 dock_split_1=0
 dock_1="FileSystem,History"
 dock_3="Scene,Import"
@@ -28,19 +28,19 @@ dock_4="Inspector,Node"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://main/main.tscn", "res://scenes/camp_site/camp_site.tscn", "res://scenes/UI/hud.tscn", "res://scenes/UI/inventory/inventory.tscn", "res://scenes/managers/stats_manager.tscn", "res://scenes/game_objects/fireplace/fireplace.tscn", "res://scenes/menu/menu_load_area_2d.tscn")
-current_scene="res://scenes/UI/inventory/inventory.tscn"
-center_split_offset=-626
+open_scenes=PackedStringArray("res://main/main.tscn", "res://scenes/camp_site/camp_site.tscn", "res://scenes/UI/hud.tscn", "res://scenes/UI/inventory/inventory.tscn", "res://scenes/menu/inventory_menu.tscn", "res://scenes/managers/item_manager.tscn", "res://scenes/UI/inventory/inventory_slot.tscn")
+current_scene="res://scenes/UI/inventory/inventory_slot.tscn"
+center_split_offset=-338
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=0
-selected_bottom_panel_item=10
+selected_main_editor_idx=2
+selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://scenes/camp_site/camp_site.gd", "res://scenes/game_objects/fireplace/fireplace.gd", "res://scenes/camera/game_camera.gd", "res://autoload/GameEvents/game_events.gd", "res://scenes/UI/hud.gd", "res://scenes/managers/item_manager.gd", "res://main/main.gd", "res://scenes/menu/menu_load_area_2d.gd", "res://scenes/managers/menu_manager.gd", "res://scenes/player/player.gd", "res://scenes/managers/scene_manager.gd", "res://autoload/ScreenTransition/screen_transition.gd", "res://scenes/managers/stats_manager.gd", "res://scenes/game_objects/tent/tent.gd", "res://scenes/components/velocity_component.gd"]
-selected_script="res://scenes/menu/menu_load_area_2d.gd"
+open_scripts=["res://scenes/camp_site/camp_site.gd", "res://scenes/UI/hud.gd", "res://scenes/UI/inventory/inventory.gd", "res://scenes/menu/inventory_menu.gd", "res://scenes/UI/inventory/inventory_slot.gd", "res://scenes/managers/item_manager.gd", "res://main/main.gd", "res://scenes/components/velocity_component.gd"]
+selected_script="res://scenes/UI/inventory/inventory_slot.gd"
 open_help=["@GlobalScope"]
-script_split_offset=70
+script_split_offset=230
 list_split_offset=0
 
 [ShaderEditor]
