--- a/Nothing Can Go Wrong/.godot/editor/script_editor_cache.cfg
+++ b/Nothing Can Go Wrong/.godot/editor/script_editor_cache.cfg
@@ -63,7 +63,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 35,
-"scroll_position": 23.0,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -129,12 +129,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 62,
+"column": 41,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 19,
+"row": 17,
 "scroll_position": 0.0,
-"selection": false,
+"selection": true,
+"selection_from_column": 13,
+"selection_from_line": 17,
+"selection_to_column": 41,
+"selection_to_line": 17,
 "syntax_highlighter": "GDScript"
 }
 
@@ -147,7 +151,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 17,
-"scroll_position": 15.0,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -171,10 +175,10 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 21,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 6,
+"row": 11,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
@@ -202,8 +206,50 @@ state={
 "column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 35,
+"row": 61,
+"scroll_position": 31.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://scenes/menu/inventory_menu.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 1,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 11,
+"scroll_position": 6.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://scenes/UI/inventory/inventory.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 0,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 10,
 "scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://scenes/UI/inventory/inventory_slot.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 78,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 42,
+"scroll_position": 28.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
