--- a/Nothing Can Go Wrong/.godot/editor/script_editor_cache.cfg
+++ b/Nothing Can Go Wrong/.godot/editor/script_editor_cache.cfg
@@ -17,11 +17,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 27,
+"column": 33,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 16,
-"scroll_position": 0.0,
+"row": 24,
+"scroll_position": 9.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -31,12 +31,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 14,
+"column": 1,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 5,
-"scroll_position": 0.0,
-"selection": false,
+"row": 23,
+"scroll_position": 15.0,
+"selection": true,
+"selection_from_column": 1,
+"selection_from_line": 23,
+"selection_to_column": 25,
+"selection_to_line": 23,
 "syntax_highlighter": "GDScript"
 }
 
@@ -59,10 +63,10 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 14,
+"column": 18,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 35,
+"row": 12,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
@@ -87,11 +91,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 52,
+"column": 1,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 2,
-"scroll_position": 0.0,
+"row": 16,
+"scroll_position": 11.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -115,11 +119,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 19,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 5,
-"scroll_position": 0.0,
+"row": 51,
+"scroll_position": 31.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -129,16 +133,12 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 41,
+"column": 42,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 17,
-"scroll_position": 0.0,
-"selection": true,
-"selection_from_column": 13,
-"selection_from_line": 17,
-"selection_to_column": 41,
-"selection_to_line": 17,
+"row": 39,
+"scroll_position": 52.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -150,8 +150,8 @@ state={
 "column": 22,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 17,
-"scroll_position": 0.0,
+"row": 10,
+"scroll_position": 6.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -161,10 +161,10 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 45,
+"column": 19,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 23,
+"row": 0,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
@@ -175,10 +175,10 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 21,
+"column": 20,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 11,
+"row": 5,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
@@ -221,7 +221,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 11,
-"scroll_position": 6.0,
+"scroll_position": 9.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -245,11 +245,53 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 78,
+"column": 65,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 42,
-"scroll_position": 28.0,
+"row": 98,
+"scroll_position": 85.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://scenes/game_objects/flashlight/flashlight.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 34,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 3,
+"scroll_position": 21.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://scenes/UI/map.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 26,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 26,
+"scroll_position": 11.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://scenes/managers/day_night_manager.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 14,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 7,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
