--- a/Nothing Can Go Wrong/.godot/editor/script_editor_cache.cfg
+++ b/Nothing Can Go Wrong/.godot/editor/script_editor_cache.cfg
@@ -147,11 +147,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 22,
+"column": 6,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 10,
-"scroll_position": 6.0,
+"row": 24,
+"scroll_position": 15.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -189,12 +189,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 20,
+"column": 16,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 8,
-"scroll_position": 0.0,
-"selection": false,
+"row": 46,
+"scroll_position": 44.0,
+"selection": true,
+"selection_from_column": 5,
+"selection_from_line": 46,
+"selection_to_column": 16,
+"selection_to_line": 46,
 "syntax_highlighter": "GDScript"
 }
 
@@ -203,11 +207,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 24,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 61,
-"scroll_position": 31.0,
+"row": 32,
+"scroll_position": 13.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -273,11 +277,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 26,
+"column": 36,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 26,
-"scroll_position": 11.0,
+"row": 19,
+"scroll_position": 12.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -287,11 +291,25 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 14,
+"column": 1,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 7,
-"scroll_position": 0.0,
+"row": 24,
+"scroll_position": 14.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://scenes/menu/decisions_menu.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 68,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 63,
+"scroll_position": 55.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
