--- a/Nothing Can Go Wrong/.godot/editor/script_editor_cache.cfg
+++ b/Nothing Can Go Wrong/.godot/editor/script_editor_cache.cfg
@@ -21,7 +21,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 24,
-"scroll_position": 9.0,
+"scroll_position": 12.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -49,11 +49,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 54,
+"column": 20,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 4,
-"scroll_position": 0.0,
+"row": 27,
+"scroll_position": 20.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -91,11 +91,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 1,
+"column": 36,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 16,
-"scroll_position": 11.0,
+"row": 12,
+"scroll_position": 12.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -119,11 +119,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 19,
+"column": 23,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 51,
-"scroll_position": 31.0,
+"row": 40,
+"scroll_position": 28.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -147,12 +147,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 6,
+"column": 18,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 24,
-"scroll_position": 15.0,
-"selection": false,
+"row": 45,
+"scroll_position": 0.0,
+"selection": true,
+"selection_from_column": 5,
+"selection_from_line": 45,
+"selection_to_column": 18,
+"selection_to_line": 45,
 "syntax_highlighter": "GDScript"
 }
 
@@ -175,11 +179,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 20,
+"column": 44,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 5,
-"scroll_position": 0.0,
+"row": 36,
+"scroll_position": 10.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -193,7 +197,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 46,
-"scroll_position": 44.0,
+"scroll_position": 21.0,
 "selection": true,
 "selection_from_column": 5,
 "selection_from_line": 46,
@@ -263,12 +267,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 34,
+"column": 4,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 3,
-"scroll_position": 21.0,
-"selection": false,
+"row": 10,
+"scroll_position": 0.0,
+"selection": true,
+"selection_from_column": 4,
+"selection_from_line": 10,
+"selection_to_column": 25,
+"selection_to_line": 10,
 "syntax_highlighter": "GDScript"
 }
 
@@ -277,11 +285,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 36,
+"column": 110,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 19,
-"scroll_position": 12.0,
+"row": 17,
+"scroll_position": 15.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -294,8 +302,8 @@ state={
 "column": 1,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 24,
-"scroll_position": 14.0,
+"row": 70,
+"scroll_position": 63.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -308,8 +316,8 @@ state={
 "column": 68,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 63,
-"scroll_position": 55.0,
+"row": 135,
+"scroll_position": 113.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
