--- a/Nothing Can Go Wrong/.godot/editor/script_editor_cache.cfg
+++ b/Nothing Can Go Wrong/.godot/editor/script_editor_cache.cfg
@@ -53,7 +53,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 27,
-"scroll_position": 20.0,
+"scroll_position": 8.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -147,16 +147,12 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 18,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 45,
-"scroll_position": 0.0,
-"selection": true,
-"selection_from_column": 5,
-"selection_from_line": 45,
-"selection_to_column": 18,
-"selection_to_line": 45,
+"row": 37,
+"scroll_position": 27.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -193,16 +189,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 16,
+"column": 22,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 46,
-"scroll_position": 21.0,
+"row": 48,
+"scroll_position": 4.0,
 "selection": true,
 "selection_from_column": 5,
-"selection_from_line": 46,
-"selection_to_column": 16,
-"selection_to_line": 46,
+"selection_from_line": 48,
+"selection_to_column": 22,
+"selection_to_line": 48,
 "syntax_highlighter": "GDScript"
 }
 
@@ -228,8 +224,8 @@ state={
 "column": 1,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 11,
-"scroll_position": 9.0,
+"row": 13,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -299,11 +295,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 1,
+"column": 43,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 70,
-"scroll_position": 63.0,
+"row": 77,
+"scroll_position": 67.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -313,11 +309,43 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 68,
+"column": 40,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 135,
-"scroll_position": 113.0,
+"row": 129,
+"scroll_position": 116.0,
 "selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://scenes/menu/rewards_menu.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 1,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 82,
+"scroll_position": 73.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://scenes/managers/actions_manager.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 25,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 3,
+"scroll_position": 0.0,
+"selection": true,
+"selection_from_column": 13,
+"selection_from_line": 3,
+"selection_to_column": 25,
+"selection_to_line": 3,
 "syntax_highlighter": "GDScript"
 }
