decisions work perfectly, now it's time to do the night mechanic

--- a/Nothing Can Go Wrong/.godot/editor/editor_layout.cfg
+++ b/Nothing Can Go Wrong/.godot/editor/editor_layout.cfg
@@ -9,18 +9,18 @@ dock_6_selected_tab_idx=0
 dock_7_selected_tab_idx=0
 dock_8_selected_tab_idx=0
 dock_floating={}
-dock_split_2=-96
+dock_split_2=-25
 dock_split_3=0
 dock_hsplit_1=264
-dock_hsplit_2=471
+dock_hsplit_2=434
 dock_hsplit_3=-391
 dock_hsplit_4=0
 dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://scenes/menu/rewards_menu.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://scenes/", "res://scenes/menu/", "res://resources/", "res://resources/theme/", "res://assets/")
+dock_filesystem_selected_paths=PackedStringArray("res://assets/icons/flashlight_icon.png")
+dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://scenes/", "res://scenes/menu/", "res://resources/", "res://resources/theme/", "res://assets/", "res://assets/icons/")
 dock_split_1=0
 dock_1="FileSystem,History"
 dock_3="Scene,Import"
@@ -28,8 +28,8 @@ dock_4="Inspector,Node"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://main/main.tscn", "res://scenes/camp_site/camp_site.tscn", "res://scenes/menu/decisions_menu.tscn", "res://scenes/managers/day_night_manager.tscn", "res://scenes/menu/rewards_menu.tscn", "res://scenes/managers/menu_manager.tscn", "res://scenes/managers/actions_manager.tscn")
-current_scene="res://scenes/menu/rewards_menu.tscn"
+open_scenes=PackedStringArray("res://main/main.tscn", "res://scenes/camp_site/camp_site.tscn", "res://scenes/menu/decisions_menu.tscn", "res://scenes/managers/day_night_manager.tscn", "res://scenes/menu/rewards_menu.tscn", "res://scenes/managers/item_manager.tscn", "res://scenes/managers/stats_manager.tscn")
+current_scene="res://scenes/managers/day_night_manager.tscn"
 center_split_offset=-468
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
@@ -37,8 +37,8 @@ selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://scenes/managers/actions_manager.gd", "res://scenes/camp_site/camp_site.gd", "res://scenes/managers/day_night_manager.gd", "res://scenes/menu/decisions_menu.gd", "res://scenes/game_objects/fireplace/fireplace.gd", "res://scenes/game_objects/flashlight/flashlight.gd", "res://scenes/camera/game_camera.gd", "res://autoload/GameEvents/game_events.gd", "res://scenes/UI/hud.gd", "res://scenes/UI/inventory/inventory.gd", "res://scenes/menu/inventory_menu.gd", "res://scenes/UI/inventory/inventory_slot.gd", "res://scenes/managers/item_manager.gd", "res://main/main.gd", "res://scenes/UI/map.gd", "res://scenes/menu/menu_load_area_2d.gd", "res://scenes/managers/menu_manager.gd", "res://scenes/player/player.gd", "res://scenes/menu/rewards_menu.gd", "res://scenes/managers/scene_manager.gd", "res://autoload/ScreenTransition/screen_transition.gd", "res://scenes/managers/stats_manager.gd", "res://scenes/game_objects/tent/tent.gd", "res://scenes/components/velocity_component.gd"]
-selected_script="res://scenes/menu/rewards_menu.gd"
+open_scripts=["res://scenes/managers/actions_manager.gd", "res://scenes/managers/day_night_manager.gd", "res://scenes/UI/hud.gd", "res://scenes/managers/item_manager.gd", "res://scenes/managers/menu_manager.gd", "res://scenes/player/player.gd", "res://scenes/menu/rewards_menu.gd", "res://scenes/managers/stats_manager.gd", "res://scenes/components/velocity_component.gd"]
+selected_script="res://scenes/managers/day_night_manager.gd"
 open_help=["@GlobalScope", "BaseButton"]
 script_split_offset=230
 list_split_offset=0
