--- a/Nothing Can Go Wrong/.godot/editor/script_editor_cache.cfg
+++ b/Nothing Can Go Wrong/.godot/editor/script_editor_cache.cfg
@@ -49,11 +49,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 20,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 27,
-"scroll_position": 0.0,
+"row": 18,
+"scroll_position": 14.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -63,11 +63,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 18,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 12,
-"scroll_position": 0.0,
+"row": 50,
+"scroll_position": 29.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -77,11 +77,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 27,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 1,
-"scroll_position": 0.0,
+"row": 27,
+"scroll_position": 4.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -91,11 +91,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 36,
+"column": 25,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 12,
-"scroll_position": 12.0,
+"row": 19,
+"scroll_position": 3.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -133,16 +133,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 25,
+"column": 17,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 27,
-"scroll_position": 0.0,
+"row": 69,
+"scroll_position": 52.0,
 "selection": true,
-"selection_from_column": 13,
-"selection_from_line": 27,
-"selection_to_column": 25,
-"selection_to_line": 27,
+"selection_from_column": 5,
+"selection_from_line": 69,
+"selection_to_column": 17,
+"selection_to_line": 69,
 "syntax_highlighter": "GDScript"
 }
 
@@ -151,16 +151,12 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 25,
+"column": 1,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 21,
-"scroll_position": 3.0,
-"selection": true,
-"selection_from_column": 13,
-"selection_from_line": 21,
-"selection_to_column": 25,
-"selection_to_line": 21,
+"row": 11,
+"scroll_position": 21.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -183,10 +179,10 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 44,
+"column": 17,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 36,
+"row": 41,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
@@ -215,11 +211,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 24,
+"column": 27,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 32,
-"scroll_position": 0.0,
+"row": 46,
+"scroll_position": 39.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -271,16 +267,12 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 4,
+"column": 39,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 10,
+"row": 22,
 "scroll_position": 0.0,
-"selection": true,
-"selection_from_column": 4,
-"selection_from_line": 10,
-"selection_to_column": 25,
-"selection_to_line": 10,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -303,11 +295,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 22,
+"column": 48,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 65,
-"scroll_position": 48.0,
+"row": 145,
+"scroll_position": 133.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -321,7 +313,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 129,
-"scroll_position": 0.0,
+"scroll_position": 97.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -331,11 +323,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 115,
+"column": 9,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 188,
-"scroll_position": 174.0,
+"row": 192,
+"scroll_position": 183.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -351,5 +343,37 @@ state={
 "row": 5,
 "scroll_position": 0.0,
 "selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://scenes/enemy/enemy.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 1,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 46,
+"scroll_position": 30.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://scenes/managers/enemy_manager.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 17,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 60,
+"scroll_position": 36.0,
+"selection": true,
+"selection_from_column": 1,
+"selection_from_line": 60,
+"selection_to_column": 17,
+"selection_to_line": 60,
 "syntax_highlighter": "GDScript"
 }
