playable, need to make use of flaregun and make end screen for winning and losing + audio

--- a/Nothing Can Go Wrong/.godot/editor/editor_layout.cfg
+++ b/Nothing Can Go Wrong/.godot/editor/editor_layout.cfg
@@ -19,8 +19,8 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://assets/icons/food_icon.png")
-dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://assets/", "res://assets/icons/")
+dock_filesystem_selected_paths=PackedStringArray("res://assets/props/cooking_stand_empty.png")
+dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://assets/", "res://assets/props/")
 dock_split_1=0
 dock_1="FileSystem,History"
 dock_3="Scene,Import"
@@ -28,17 +28,17 @@ dock_4="Inspector,Node"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://main/main.tscn", "res://scenes/camp_site/camp_site.tscn", "res://scenes/menu/decisions_menu.tscn", "res://scenes/game_objects/tent/tent.tscn", "res://scenes/enemy/enemy.tscn", "res://scenes/game_objects/fireplace/fireplace.tscn", "res://scenes/managers/item_manager.tscn")
-current_scene="res://scenes/game_objects/fireplace/fireplace.tscn"
-center_split_offset=-497
+open_scenes=PackedStringArray("res://main/main.tscn", "res://scenes/camp_site/camp_site.tscn", "res://scenes/menu/decisions_menu.tscn", "res://scenes/game_objects/tent/tent.tscn", "res://scenes/enemy/enemy.tscn", "res://scenes/game_objects/fireplace/fireplace.tscn", "res://scenes/managers/item_manager.tscn", "res://scenes/menu/inventory_menu.tscn", "res://scenes/managers/menu_manager.tscn")
+current_scene="res://scenes/camp_site/camp_site.tscn"
+center_split_offset=-489
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=0
 selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://scenes/camp_site/camp_site.gd", "res://scenes/managers/day_night_manager.gd", "res://scenes/menu/decisions_menu.gd", "res://scenes/enemy/enemy.gd", "res://scenes/managers/enemy_manager.gd", "res://scenes/game_objects/fireplace/fireplace.gd", "res://scenes/game_objects/flashlight/flashlight.gd", "res://autoload/GameEvents/game_events.gd", "res://scenes/managers/item_manager.gd", "res://main/main.gd", "res://scenes/menu/menu_load_area_2d.gd", "res://scenes/managers/menu_manager.gd", "res://scenes/player/player.gd", "res://scenes/menu/rewards_menu.gd", "res://scenes/managers/stats_manager.gd", "res://scenes/game_objects/tent/tent.gd"]
-selected_script="res://scenes/game_objects/fireplace/fireplace.gd"
+open_scripts=["res://scenes/camp_site/camp_site.gd", "res://scenes/managers/day_night_manager.gd", "res://scenes/menu/decisions_menu.gd", "res://scenes/enemy/enemy.gd", "res://scenes/managers/enemy_manager.gd", "res://scenes/game_objects/fireplace/fireplace.gd", "res://scenes/game_objects/flashlight/flashlight.gd", "res://autoload/GameEvents/game_events.gd", "res://scenes/UI/inventory/inventory.gd", "res://scenes/menu/inventory_menu.gd", "res://scenes/UI/inventory/inventory_slot.gd", "res://scenes/managers/item_manager.gd", "res://main/main.gd", "res://scenes/menu/menu_load_area_2d.gd", "res://scenes/managers/menu_manager.gd", "res://scenes/player/player.gd", "res://scenes/menu/rewards_menu.gd", "res://scenes/managers/stats_manager.gd", "res://scenes/game_objects/tent/tent.gd"]
+selected_script="res://scenes/camp_site/camp_site.gd"
 open_help=[]
 script_split_offset=230
 list_split_offset=0
