--- a/Nothing Can Go Wrong/.godot/editor/script_editor_cache.cfg
+++ b/Nothing Can Go Wrong/.godot/editor/script_editor_cache.cfg
@@ -52,8 +52,8 @@ state={
 "column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 18,
-"scroll_position": 14.0,
+"row": 6,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -63,11 +63,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 29,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 50,
-"scroll_position": 29.0,
+"row": 10,
+"scroll_position": 8.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -133,16 +133,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 17,
+"column": 10,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 69,
-"scroll_position": 52.0,
+"row": 61,
+"scroll_position": 55.0,
 "selection": true,
-"selection_from_column": 5,
-"selection_from_line": 69,
-"selection_to_column": 17,
-"selection_to_line": 69,
+"selection_from_column": 1,
+"selection_from_line": 61,
+"selection_to_column": 10,
+"selection_to_line": 61,
 "syntax_highlighter": "GDScript"
 }
 
@@ -151,12 +151,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 1,
+"column": 26,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 11,
-"scroll_position": 21.0,
-"selection": false,
+"row": 13,
+"scroll_position": 0.0,
+"selection": true,
+"selection_from_column": 13,
+"selection_from_line": 13,
+"selection_to_column": 26,
+"selection_to_line": 13,
 "syntax_highlighter": "GDScript"
 }
 
@@ -197,7 +201,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 48,
-"scroll_position": 18.0,
+"scroll_position": 45.0,
 "selection": true,
 "selection_from_column": 5,
 "selection_from_line": 48,
@@ -225,12 +229,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 1,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 13,
-"scroll_position": 0.0,
-"selection": false,
+"row": 30,
+"scroll_position": 12.0,
+"selection": true,
+"selection_from_column": 0,
+"selection_from_line": 30,
+"selection_to_column": 27,
+"selection_to_line": 31,
 "syntax_highlighter": "GDScript"
 }
 
@@ -253,12 +261,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 65,
+"column": 27,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 98,
-"scroll_position": 0.0,
-"selection": false,
+"row": 134,
+"scroll_position": 116.0,
+"selection": true,
+"selection_from_column": 13,
+"selection_from_line": 134,
+"selection_to_column": 27,
+"selection_to_line": 134,
 "syntax_highlighter": "GDScript"
 }
 
@@ -295,11 +307,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 48,
+"column": 27,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 145,
-"scroll_position": 133.0,
+"row": 158,
+"scroll_position": 110.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -309,11 +321,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 40,
+"column": 27,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 129,
-"scroll_position": 97.0,
+"row": 147,
+"scroll_position": 120.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -355,7 +367,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 46,
-"scroll_position": 30.0,
+"scroll_position": 19.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
