--- a/Nothing Can Go Wrong/.godot/editor/editor_layout.cfg
+++ b/Nothing Can Go Wrong/.godot/editor/editor_layout.cfg
@@ -12,7 +12,7 @@ dock_floating={}
 dock_split_2=-111
 dock_split_3=0
 dock_hsplit_1=264
-dock_hsplit_2=565
+dock_hsplit_2=420
 dock_hsplit_3=-391
 dock_hsplit_4=0
 dock_filesystem_split=0
@@ -28,16 +28,17 @@ dock_4="Inspector,Node"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://main/main.tscn", "res://scenes/camp_site/camp_site.tscn", "res://scenes/menu/decisions_menu.tscn", "res://autoload/GameEvents/game_events.tscn", "res://scenes/managers/day_night_manager.tscn", "res://scenes/menu/end_of_game_menu.tscn", "res://scenes/menu/main_menu.tscn", "res://autoload/ScreenTransition/screen_transition.tscn", "res://autoload/AudioManager/audio_manager.tscn")
-current_scene="res://autoload/AudioManager/audio_manager.tscn"
-center_split_offset=-589
+open_scenes=PackedStringArray("res://main/main.tscn", "res://scenes/camp_site/camp_site.tscn", "res://scenes/managers/day_night_manager.tscn", "res://scenes/menu/end_of_game_menu.tscn", "res://scenes/menu/main_menu.tscn")
+current_scene="res://scenes/menu/main_menu.tscn"
+center_split_offset=-437
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=2
+selected_main_editor_idx=0
+selected_bottom_panel_item=4
 
 [ScriptEditor]
 
 open_scripts=["res://autoload/AudioManager/audio_manager.gd", "res://scenes/camp_site/camp_site.gd", "res://scenes/managers/day_night_manager.gd", "res://scenes/menu/decisions_menu.gd", "res://scenes/menu/end_of_game_menu.gd", "res://scenes/enemy/enemy.gd", "res://scenes/managers/enemy_manager.gd", "res://scenes/game_objects/fireplace/fireplace.gd", "res://scenes/game_objects/flashlight/flashlight.gd", "res://scenes/camera/game_camera.gd", "res://autoload/GameEvents/game_events.gd", "res://scenes/UI/hud.gd", "res://scenes/UI/inventory/inventory.gd", "res://scenes/menu/inventory_menu.gd", "res://scenes/UI/inventory/inventory_slot.gd", "res://scenes/managers/item_manager.gd", "res://scenes/menu/lost_menu.gd", "res://scenes/UI/lost_sanity_effect.gd", "res://main/main.gd", "res://scenes/menu/main_menu.gd", "res://scenes/UI/map.gd", "res://scenes/menu/menu_load_area_2d.gd", "res://scenes/managers/menu_manager.gd", "res://scenes/player/player.gd", "res://scenes/menu/rewards_menu.gd", "res://autoload/ScreenTransition/screen_transition.gd", "res://resources/scripts/sound_effect_resource.gd", "res://scenes/managers/stats_manager.gd", "res://scenes/game_objects/tent/tent.gd"]
-selected_script="res://resources/scripts/sound_effect_resource.gd"
+selected_script="res://scenes/menu/main_menu.gd"
 open_help=[]
 script_split_offset=230
 list_split_offset=0
