playable game,  noww  I need sound effects

--- a/Nothing Can Go Wrong/.godot/global_script_class_cache.cfg
+++ b/Nothing Can Go Wrong/.godot/global_script_class_cache.cfg
@@ -1,4 +1,10 @@
 list=Array[Dictionary]([{
+"base": &"CanvasLayer",
+"class": &"RewardsMenu",
+"icon": "",
+"language": &"GDScript",
+"path": "res://scenes/menu/rewards_menu.gd"
+}, {
 "base": &"Resource",
 "class": &"SoundEffect",
 "icon": "",
